--- a/widget.ui
+++ b/widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>758</width>
-    <height>290</height>
+    <width>1048</width>
+    <height>617</height>
    </rect>
   </property>
   <widget class="QPlainTextEdit" name="plainMissionName">
@@ -15,9 +15,12 @@
     <rect>
      <x>10</x>
      <y>70</y>
-     <width>721</width>
-     <height>41</height>
+     <width>1021</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;Verdana&quot;;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="MissionName">
@@ -63,10 +66,13 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>150</y>
-     <width>721</width>
-     <height>41</height>
+     <y>160</y>
+     <width>1021</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;Verdana&quot;;</string>
    </property>
   </widget>
   <widget class="QLabel" name="Label_MissionName">
@@ -124,8 +130,8 @@
   <widget class="QPushButton" name="ClipboardCampaignName">
    <property name="geometry">
     <rect>
-     <x>424</x>
-     <y>120</y>
+     <x>420</x>
+     <y>130</y>
      <width>211</width>
      <height>23</height>
     </rect>
@@ -151,7 +157,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>210</y>
+     <y>220</y>
      <width>151</width>
      <height>23</height>
     </rect>
@@ -164,7 +170,7 @@
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>210</y>
+     <y>220</y>
      <width>191</width>
      <height>23</height>
     </rect>
@@ -177,13 +183,26 @@
    <property name="geometry">
     <rect>
      <x>460</x>
-     <y>210</y>
+     <y>220</y>
      <width>161</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Save Dupe DB</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEdit_Status">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>260</y>
+     <width>1021</width>
+     <height>341</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;Verdana&quot;;</string>
    </property>
   </widget>
  </widget>
